# vox

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP_RESEARCH.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
persona/: ann.yaml  example.yaml
scripts/: caption_images.py  content_guard.sh  curate_training_images.py  curate_training_images_v2.py  prepare_training.py
src/vox/: __init__.py  __main__.py  audio.py  auto_issue.py  cli.py  config.py  contacts.py  conversation_log.py  escalate.py  llm.py  lora.py  macros.py  mcp_server.py  memory.py  model_manager.py  persona.py  persona_life.py  pipeline.py  planner.py  plugins.py  preferences.py  proactive.py  rag.py  reminders.py  setup.py  stt.py  todos.py  tools.py  train.py  tts.py  vector_memory.py  wake.py  web.py
src/vox/static/: index.html
tests/: test_config.py  test_contacts.py  test_conversation_log.py  test_escalate.py  test_macros.py  test_mcp_server.py  test_memory.py  test_model_manager.py  test_persona.py  test_persona_life.py  test_planner.py  test_plugins.py  test_proactive.py  test_rag.py  test_setup.py  test_todos.py  test_tools.py  test_tts.py  test_vector_memory.py  test_wake.py  test_web.py
