[project]
name = "vox"
version = "0.7.1"
description = "VOX — Voice Operated eXecutive. Local-first AI voice assistant on RTX 3090."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "faster-whisper>=1.0.0",
    "ollama>=0.4.0",
    "pvporcupine>=3.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
xtts = [
    "TTS>=0.22.0",
    "torch>=2.5.0",
]
piper = [
    "piper-tts>=1.2.0",
]
image = [
    "diffusers>=0.26.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors",
    "Pillow",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "vox[xtts,piper,image,dev]",
]

[project.scripts]
vox = "vox.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = ["S603", "S607", "S310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
