[project]
name = "vox"
version = "0.12.0"
description = "VOX — Voice Operated eXecutive. Local-first AI voice assistant on RTX 3090."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "faster-whisper>=1.0.0",
    "ollama>=0.4.0",
    "pvporcupine>=3.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
xtts = [
    "TTS>=0.22.0",
    "torch>=2.5.0",
]
piper = [
    "piper-tts>=1.2.0",
]
image = [
    "diffusers>=0.26.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors",
    "Pillow",
    "hf_xet>=1.0.0",
]
lora = [
    "diffusers>=0.26.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors",
    "Pillow",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "hf_xet>=1.0.0",
]
claude = [
    "anthropic>=0.40.0",
]
memory = [
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.0.0",
]
all = [
    "vox[xtts,piper,image,lora,web,claude,memory,mcp,dev]",
]

[project.scripts]
vox = "vox.cli:main"
vox-mcp = "vox.mcp_server:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = ["S603", "S607", "S310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
